--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #mongodb
-spring.data.mongodb.uri=mongodb+srv://jokerjester:Jkdinpers2011@jokerjester-hlfg2.mongodb.net/jokerjester
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@jokerjester-hlfg2.mongodb.net/<db>
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=jokerjester
+spring.data.mongodb.database=<db>
