--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #mongodb
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@jokerjester-hlfg2.mongodb.net/<db>
+spring.data.mongodb.uri=mongodb+srv://demo:Z17yf4srK0RkPbfk@jkd-cluster-yqpt4.mongodb.net/demo
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=<db>
+spring.data.mongodb.database=jikky
